[package]
name = "onion_scanner"
version = "0.1.2"
authors = ["onionpsy <onionpsy@protonmail.com>"]
edition = "2018"

[dependencies]
pnet = "0.28.0"
ipnet = "2.3.1"
colored = "2"
clap = "3.0.0-beta.2"
rand = "0.8.0"
crossbeam = "0.8"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"

[target.'cfg(windows)'.dependencies]
# winapi = "0.3.8" # This will not work because the size of c_void defaults to 0.
winapi = { version = "0.3.8", features = [ "std" ] }
